<resources>
    <string name="a11y_call_incoming_answer_description">Answer</string>
    <string name="a11y_call_incoming_decline_description">Decline</string>
    <string name="a11y_description_incall_label_manage_content">Manage callers</string>
    <string name="a11y_description_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_description_incoming_call_reject_with_sms">Reject with message</string>
    <string name="a11y_incoming_call_answer_video_as_audio">Answer as audio call</string>
    <string name="a11y_incoming_call_reject_with_sms">Reject this call with a message</string>
    <string name="a11y_incoming_call_swipe_gesture_prompt">Two finger swipe up to answer. Two finger swipe down to decline.</string>
    <string name="a11y_incoming_call_swipe_to_answer">Swipe up with two fingers to answer or down to reject the call</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_build_version">Build version</string>
    <string name="about_open_source_licenses">Open source licenses</string>
    <string name="about_open_source_licenses_summary">License details for open source software</string>
    <string name="about_phone_label">About Phone</string>
    <string name="about_privacy_policy">Privacy policy</string>
    <string name="about_terms_of_service">Terms of service</string>
    <string name="accessibility_settings_title">Accessibility</string>
    <string name="account_phone">Device-only, unsynced</string>
    <string name="actionIncomingCall">Incoming calls</string>
    <string name="action_block_number">Block number</string>
    <string name="action_copy_number_text">Copy number</string>
    <string name="action_edit_number_before_call">Edit number before call</string>
    <string name="action_menu_back_from_search">stop searching</string>
    <string name="action_menu_call_history_description">Call history</string>
    <string name="action_menu_dialpad_button">key pad</string>
    <string name="action_menu_overflow_description">More options</string>
    <string name="action_report_number">Report inaccurate number</string>
    <string name="action_unblock_number">Unblock number</string>
    <string name="activity_not_available">No app for that on this device</string>
    <string name="activity_title_licenses">Open source licenses</string>
    <string name="activity_title_settings">Settings</string>
    <string name="addBlockedNumber">Add number</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_contact_not_available">No contacts app available</string>
    <string name="add_wait">Add wait</string>
    <string name="all_contacts_empty">"You don't have any contacts yet"</string>
    <string name="all_contacts_empty_add_contact_action">Add a contact</string>
    <string name="allow">Allow</string>
    <string name="alreadyBlocked">%1$s is already blocked.</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applicationLabel">Phone</string>
    <string name="audioroute_bluetooth">Bluetooth</string>
    <string name="audioroute_headset">Wired headset</string>
    <string name="audioroute_phone">Phone</string>
    <string name="audioroute_speaker">Speaker</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="block_list">Blocked numbers</string>
    <string name="block_number_alert_details">%1$s This call will be reported as spam.</string>
    <string name="block_number_confirmation_message_new_filtering">You will no longer receive calls or texts from this number.</string>
    <string name="block_number_confirmation_message_no_vvm">Calls from this number will be blocked, but the caller may still be able to leave you voicemails.</string>
    <string name="block_number_confirmation_message_vvm">Calls from this number will be blocked and voicemails will be automatically deleted.</string>
    <string name="block_number_confirmation_title">Block %1$s?</string>
    <string name="block_number_footer_message_no_vvm">Calls from these numbers will be blocked, but they may still be able to leave you voicemails.</string>
    <string name="block_number_footer_message_vvm">Calls from these numbers will be blocked and voicemails will be automatically deleted.</string>
    <string name="block_number_ok">BLOCK</string>
    <string name="block_number_search_hint">Add number or search contacts</string>
    <string name="block_number_undo">UNDO</string>
    <string name="block_report_number_alert_details">You will no longer receive calls from this number.</string>
    <string name="block_report_number_alert_title">Block %1$s?</string>
    <string name="blocked_call_settings_import_button">Import</string>
    <string name="blocked_call_settings_import_description">You previously marked some callers to be automatically sent to voicemail via other apps.</string>
    <string name="blocked_call_settings_view_numbers_button">View Numbers</string>
    <string name="blocked_number_call_log_label">Blocked</string>
    <string name="blocked_numbers_disabled_emergency_desc">Call blocking has been disabled because you contacted emergency services from this phone within the last 48 hours. It will be automatically reenabled once the 48 hour period expires.</string>
    <string name="blocked_numbers_disabled_emergency_header_label">Call blocking temporarily off</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="build_version_key">build_version</string>
    <string name="build_version_label">Build version</string>
    <string name="business_contact_context_title">Business info</string>
    <string name="caching_vcard_message">Caching vCard(s) to local temporary storage. The actual import will start soon.</string>
    <string name="caching_vcard_title">Caching</string>
    <string name="callDetailTitle">Call details</string>
    <string name="callDetailsDurationFormat" formatted="false">%s min %s sec</string>
    <string name="callDetailsShortDurationFormat">%s sec</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callHistoryIconLabel">Call history</string>
    <string name="call_assistant">Call %s</string>
    <string name="call_blocking_disabled_notification_text">Disabled because an emergency call was made.</string>
    <string name="call_blocking_disabled_notification_title">Call blocking disabled for 48 hours</string>
    <string name="call_by_shortcut">%s (Call)</string>
    <string name="call_callback">Call callback</string>
    <string name="call_car">Call car</string>
    <string name="call_company_main">Call company main</string>
    <string name="call_composer_connection_failed">%1$s unavailable right now</string>
    <string name="call_custom">Call %s</string>
    <string name="call_detail_list_header">Calls list</string>
    <string name="call_details_delete">Delete</string>
    <string name="call_disambig_title">Choose number</string>
    <string name="call_fax_home">Call home fax</string>
    <string name="call_fax_work">Call work fax</string>
    <string name="call_home">Call home</string>
    <string name="call_incoming_answer">Answer</string>
    <string name="call_incoming_audio_handset">Handset</string>
    <string name="call_incoming_audio_speakerphone">Speakerphone</string>
    <string name="call_incoming_custom_message_cancel">Cancel</string>
    <string name="call_incoming_custom_message_send">Send</string>
    <string name="call_incoming_decline">Decline</string>
    <string name="call_incoming_important">Important call</string>
    <string name="call_incoming_message_custom">Write your own…</string>
    <string name="call_incoming_respond_via_sms_custom_message">Write your own…</string>
    <string name="call_incoming_swipe_to_answer">Swipe up to answer</string>
    <string name="call_incoming_swipe_to_answer_video_as_audio">Swipe from icon to answer as an audio call</string>
    <string name="call_incoming_swipe_to_decline_with_message">Swipe from icon to decline with message</string>
    <string name="call_incoming_swipe_to_reject">Swipe down to reject</string>
    <string name="call_incoming_video_is_off">Video is off</string>
    <string name="call_incoming_will_disconnect">Answering this call will end your video call</string>
    <string name="call_isdn">Call ISDN</string>
    <string name="call_log_action_block_number">Block number</string>
    <string name="call_log_action_block_report_number">Block/report spam</string>
    <string name="call_log_action_call">Call ^1</string>
    <string name="call_log_action_details">Call details</string>
    <string name="call_log_action_remove_spam">Not spam</string>
    <string name="call_log_action_send_message">Send a message</string>
    <string name="camera_cancel_recording">Stop recording video</string>
    <string name="camera_switch_camera_rear">Button is now back camera</string>
    <string name="camera_take_picture">Take photo</string>
    <string name="custom_message_hint">Write a custom message</string>
    <string name="quick_question">Quick question…</string>
    <string name="urgent">Urgent! Please pick up!</string>
    <string name="verizon_terms_and_conditions_accept_english">Accept</string>
    <string name="verizon_terms_and_conditions_decline_english">Decline</string>
    <string name="verizon_terms_and_conditions_title">Visual Voicemail Terms and Conditions</string>
    <string name="want_to_chat">Want to chat?</string>
</resources>