<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="bottom" android:orientation="vertical" android:background="@color/background_dialer_white" android:layout_width="fill_parent" android:layout_height="@dimen/call_composer_view_pager_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/message_urgent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/urgent" style="@style/message_composer_textview" />
    <TextView android:id="@id/message_chat" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/want_to_chat" style="@style/message_composer_textview" />
    <TextView android:id="@id/message_question" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/quick_question" style="@style/message_composer_textview" />
    <View android:background="@color/call_composer_divider" android:layout_width="fill_parent" android:layout_height="@dimen/message_composer_divider_height" />
    <EditText android:textSize="@dimen/message_compose_item_text_size" android:textColor="@color/dialer_primary_text_color" android:textColorHint="@color/dialer_edit_text_hint_color" android:id="@id/custom_message" android:background="@color/background_dialer_white" android:padding="@dimen/message_composer_item_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/custom_message_hint" android:maxLength="@integer/call_composer_message_limit" android:textCursorDrawable="@drawable/searchedittext_custom_cursor" />
</LinearLayout>