<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:orientation="vertical" android:id="@id/voicemail_tos_message" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/call_log_primary_text_size" android:textStyle="bold" android:textColor="@color/primary_text_color" android:id="@id/tos_message_title" android:paddingTop="24.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/verizon_terms_and_conditions_title" />
            <TextView android:textSize="@dimen/call_log_detail_text_size" android:textColor="@color/secondary_text_color" android:autoLink="web" android:id="@id/tos_message_details" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/verizon_terms_and_conditions_1.1_english" />
        </LinearLayout>
    </ScrollView>
    <View android:background="#ffd2d2d2" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/voicemail_tos_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="16.0dip" android:paddingEnd="16.0dip">
        <TextView android:id="@id/voicemail_tos_button_decline" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/verizon_terms_and_conditions_decline_english" style="@style/ErrorActionStyle" />
        <android.support.v4.widget.Space android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <TextView android:id="@id/voicemail_tos_button_accept" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/verizon_terms_and_conditions_accept_english" style="@style/RaisedErrorActionStyle" />
    </LinearLayout>
</LinearLayout>