<?xml version="1.0" encoding="utf-8"?>
<com.android.dialer.callcomposer.cameraui.CameraMediaChooserView android:id="@id/camera_view" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/mediapicker_enabled" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.android.dialer.callcomposer.camera.HardwareCameraPreview android:layout_gravity="center" android:id="@id/camera_preview" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <com.android.dialer.callcomposer.camera.camerafocus.RenderOverlay android:id="@id/focus_visual" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <View android:id="@id/camera_shutter_visual" android:background="@android:color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <FrameLayout android:layout_gravity="bottom" android:id="@id/camera_button_container" android:background="@android:color/transparent" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageButton android:layout_gravity="end|bottom|center" android:id="@id/camera_fullscreen" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="@dimen/camera_view_button_size" android:layout_height="@dimen/camera_view_button_size" android:layout_marginBottom="@dimen/camera_view_button_margin" android:src="@drawable/quantum_ic_fullscreen_white_48" android:layout_marginEnd="@dimen/camera_view_button_margin" />
            <ImageButton android:layout_gravity="end|bottom|center" android:id="@id/camera_exit_fullscreen" android:background="?android:selectableItemBackgroundBorderless" android:visibility="gone" android:layout_width="@dimen/camera_view_button_size" android:layout_height="@dimen/camera_view_button_size" android:layout_marginBottom="@dimen/camera_view_button_margin" android:src="@drawable/quantum_ic_fullscreen_exit_white_48" android:layout_marginEnd="@dimen/camera_view_button_margin" />
            <ImageButton android:layout_gravity="bottom|center" android:id="@id/camera_capture_button" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="@dimen/capture_button_size" android:layout_height="@dimen/capture_button_size" android:layout_marginBottom="@dimen/capture_button_bottom_margin" android:src="@drawable/ic_capture" android:scaleType="fitXY" android:contentDescription="@string/camera_take_picture" />
            <ImageButton android:layout_gravity="start|bottom|center" android:id="@id/swap_camera_button" android:background="@drawable/transparent_button_background" android:layout_width="@dimen/camera_view_button_size" android:layout_height="@dimen/camera_view_button_size" android:layout_marginBottom="@dimen/camera_view_button_margin" android:src="@drawable/front_back_switch_button_animation" android:contentDescription="@string/camera_switch_camera_rear" android:layout_marginStart="@dimen/camera_view_button_margin" />
            <ImageButton android:layout_gravity="start|bottom|center" android:id="@id/camera_cancel_button" android:background="@drawable/transparent_button_background" android:visibility="gone" android:layout_width="@dimen/camera_view_button_size" android:layout_height="@dimen/camera_view_button_size" android:layout_marginBottom="@dimen/camera_view_button_margin" android:src="@drawable/quantum_ic_undo_white_48" android:contentDescription="@string/camera_cancel_recording" android:layout_marginStart="@dimen/camera_view_button_margin" />
        </FrameLayout>
    </FrameLayout>
</com.android.dialer.callcomposer.cameraui.CameraMediaChooserView>